--- a/RPGSystem/RPGSystem/App.config
+++ b/RPGSystem/RPGSystem/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <connectionStrings>
+      <add name="RPGSystem" connectionString="Data Source = (local); Initial Catalog=RPGSystem; Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    </connectionStrings>
 </configuration>
