--- a/RPGSystem/RPGSystem/RPGSystem.csproj
+++ b/RPGSystem/RPGSystem/RPGSystem.csproj
@@ -76,9 +76,11 @@
     <Compile Include="DAO\AtributoDAO.cs" />
     <Compile Include="DAO\DBAcces.cs" />
     <Compile Include="DAO\IDAO.cs" />
+    <Compile Include="DAO\ItemDAO.cs" />
     <Compile Include="DAO\UsuarioDAO.cs" />
     <Compile Include="Entidades\Atributos.cs" />
     <Compile Include="Entidades\IEntidades.cs" />
+    <Compile Include="Entidades\Item.cs" />
     <Compile Include="Formularios\FactoryTelas.cs" />
     <Compile Include="Formularios\frmAdministrador.cs">
       <SubType>Form</SubType>
@@ -106,11 +108,11 @@
     <Compile Include="Formularios\ucIncluirAtributo.Designer.cs">
       <DependentUpon>ucIncluirAtributo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\ucItem.cs">
+    <Compile Include="Formularios\ucInculirItem.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Formularios\ucItem.Designer.cs">
-      <DependentUpon>ucItem.cs</DependentUpon>
+    <Compile Include="Formularios\ucInculirItem.Designer.cs">
+      <DependentUpon>ucInculirItem.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\ucListarAtributos.cs">
       <SubType>UserControl</SubType>
@@ -143,8 +145,8 @@
     <EmbeddedResource Include="Formularios\ucIncluirAtributo.resx">
       <DependentUpon>ucIncluirAtributo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\ucItem.resx">
-      <DependentUpon>ucItem.cs</DependentUpon>
+    <EmbeddedResource Include="Formularios\ucInculirItem.resx">
+      <DependentUpon>ucInculirItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\ucListarAtributos.resx">
       <DependentUpon>ucListarAtributos.cs</DependentUpon>
